--- a/PhoenixGameEngine/PhoenixGameEngine.vcxproj.filters
+++ b/PhoenixGameEngine/PhoenixGameEngine.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="src\Phoenix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Phoenix\EntryPoint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Phoenix\Application.cpp">
